# VP

./: .gitignore  CMakeLists.txt  README.md  README_IMU_Video_Processing.md  README_recalib.md  main.cpp  preq.py  tool_recalib.cpp  utils.py
3rd/: CMakeLists.txt
3rd/ethzasl_apriltag2/include/apriltags/: MathUtil.h
3rd/ethzasl_apriltag2/src/: Edge.cc  Quad.cc  TagDetector.cc
data/: angle_pose_offset_analysis.csv
data/lanes/: intrinsics_colin.json  person.json
data/recalib/: calib.yuv  extrinsics.json  intrinsics.json  intrinsics_colin.json
estimate_velocity/: __init__.py  demo.py  imu_velocity_estimator.py  optical_flow_estimator.py  pipeline.py  velocity_classifier.py  velocity_fusion.py
extrinsic_refine/: er.py  er2.py
include/: aprilgrid2.h  ipm.h  kalman_filter.h  recalib.h  stitch.h  vp.h
lib/: CMakeLists.txt  e_recalib.cpp  e_recalib.h  test_e_recalib.cpp
misc/: UFLDv2.py  experi.py  ipm.py  recalib.py
src/: aprilgrid2.cpp  aprilgrid2.h  est_roll.cpp  est_roll.h  ipm.cpp  json.h  kalman_filter.h  macros.h  recalib.cpp  stitch.cpp  utils.h  vp.cpp
test/: test_est_roll.cpp  test_lib_recalib.cpp  test_recalib.cpp
tool/: tool_recalib.cpp
vp/: apriltag.py  est_roll.py  imu_align.py  imu_color_extract.py  ipm.py  preq.py  stitch.py  stitch_bwd.py  stitch_fwd.py  utils.py
vp/aprilgrid/: common.py  detection.py  detector.py  tag_codes.py  tag_family.py
vp/stitch/: apriltag.py
